--- a/app/views/template_tasks/show.html.haml
+++ b/app/views/template_tasks/show.html.haml
@@ -9,8 +9,8 @@
 	= @template_task.text
 
 %p
-	%strong Tentative Due Date:
-	= @template_task.tentative_due_date
+	%strong Days until due:
+	= @template_task.due_days
 
 %p
 	%strong Sort Order:
