--- a/app/views/jobs/_form.html.haml
+++ b/app/views/jobs/_form.html.haml
@@ -25,24 +25,24 @@
 			= f.text_field :reference, :class => "form-control"
 
 	.form-group
-		= f.label :party_a, :class => "control-label col-sm-2"
+		= f.label "Party A", :class => "control-label col-sm-2"
 		.col-sm-5
-			= f.text_field :party_a_id, :class => "form-control"
+			= f.select :party_a_id, options_for_select([["Please select...",""]]+Contact.for_select, @job.party_a_id), {}, :class => "form-control"
 
 	.form-group
-		= f.label :party_b, :class => "control-label col-sm-2"
+		= f.label "Party B", :class => "control-label col-sm-2"
 		.col-sm-5
-			= f.text_field :party_b_id, :class => "form-control"
+			= f.select :party_b_id, options_for_select([["Please select...",""]]+Contact.for_select, @job.party_b_id), {}, :class => "form-control"
 
 	.form-group
 		= f.label :legal_rep, :class => "control-label col-sm-2"
 		.col-sm-5
-			= f.text_field :legal_rep, :class => "form-control"
+			= f.select :legal_rep, options_for_select([["Please select...",""]]+Contact.for_select, @job.legal_rep), {}, :class => "form-control"
 
 	.form-group
 		= f.label :mediator, :class => "control-label col-sm-2"
 		.col-sm-5
-			= f.text_field :mediator, :class => "form-control"
+			= f.select :mediator, options_for_select([["Please select...",""]]+Contact.for_select, @job.mediator), {}, :class => "form-control"
 
 	.form-group
 		= f.label :fees_paid, :class => "control-label col-sm-2"
