--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,15 +21,17 @@
 				.navbar-collapse{ :class => "collapse" }
 					%ul.nav{ :class => "navbar-nav" }
 						%li{ :class => "#{params[:controller].eql?("jobs") ? "active" : ""}" }= link_to "Home", '/'
+						%li{ :class => "#{params[:controller].eql?("notes") ? "active" : ""}" }= link_to "Finance", :notes
 						%li{ :class => "#{params[:controller].eql?("tasks") ? "active" : ""}" }= link_to "Tasks", :tasks
-						%li{ :class => "#{params[:controller].eql?("notes") ? "active" : ""}" }= link_to "Notes", :notes
 						%li{ :class => "#{params[:controller].eql?("contacts") ? "active" : ""}" }= link_to "Contacts", :contacts
-						%li{ :class => "#{params[:controller].eql?("template_tasks") ? "active" : ""}" }= link_to "Admin", :template_tasks
-						%li.dropdown
+						- b_on = params[:controller].eql?("template_tasks") ||  params[:controller].eql?("users") ||  params[:controller].eql?("notes")
+						%li.dropdown{ :class => "#{b_on ? "active" : ""}" }
 							%a.dropdown-toggle{ :href => "#", :"data-toggle" => "dropdown" }
-								Dropdown
+								Admin
 								%b.caret
 							%ul.dropdown-menu
+								%li{ :class => "#{params[:controller].eql?("template_tasks") ? "active" : ""}" }= link_to "Task Templates", :template_tasks
+								%li{ :class => "#{params[:controller].eql?("users") ? "active" : ""}" }= link_to "Users", :users
 								%li
 									%a{ :href => "#" } Action
 								%li
@@ -38,6 +40,7 @@
 									%a{ :href => "#" } Something else here
 								%li.divider
 								%li.dropdown-header Nav header
+								%li{ :class => "#{params[:controller].eql?("notes") ? "active" : ""}" }= link_to "Notes", :notes
 								%li
 									%a{ :href => "#" } Separated link
 								%li
