--- a/app/views/template_tasks/_form.html.haml
+++ b/app/views/template_tasks/_form.html.haml
@@ -29,6 +29,13 @@
 		.col-sm-5
 			= f.text_area :text, :class => "form-control", :rows => "5"
 
+	.form-group
+		.col-sm-offset-2.col-sm-10
+			.checkbox
+				%label
+					= f.check_box :is_financial
+					Finincial task 
+
 	.actions
 		.col-sm-offset-2
 			= f.submit class: "btn btn-primary"
