--- a/app/views/template_tasks/show.html.haml
+++ b/app/views/template_tasks/show.html.haml
@@ -1,6 +1,10 @@
 %p#notice= notice
 
 %p
+	%strong Sort Order:
+	= @template_task.sort_order
+
+%p
 	%strong Title:
 	= @template_task.title
 
@@ -13,8 +17,8 @@
 	= @template_task.due_days
 
 %p
-	%strong Sort Order:
-	= @template_task.sort_order
+	%strong Finincial task:
+	= @template_task.is_financial ? "Yes" : "No"
 
 = link_to 'Edit', edit_template_task_path(@template_task)
 |
