--- a/app/views/jobs/_form.html.haml
+++ b/app/views/jobs/_form.html.haml
@@ -10,19 +10,19 @@
 					%li= msg
 
 	.form-group
+		= f.label :reference, :class => "control-label col-sm-2"
+		.col-sm-5
+			= f.text_field :reference, :class => "form-control"
+
+	.form-group
 		= f.label :title, :class => "control-label col-sm-2"
 		.col-sm-5
 			= f.text_field :title, :class => "form-control autofocus"
 
 	.form-group
-		= f.label :text, :class => "control-label col-sm-2"
+		= f.label :description, :class => "control-label col-sm-2"
 		.col-sm-5
 			= f.text_area :text, :class => "form-control", :rows => "5"
-
-	.form-group
-		= f.label :reference, :class => "control-label col-sm-2"
-		.col-sm-5
-			= f.text_field :reference, :class => "form-control"
 
 	.form-group
 		= f.label "Party A", :class => "control-label col-sm-2"
