--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -19,6 +19,16 @@
 		.col-sm-5
 			= f.text_field :email, :class => "form-control"
 
+	.form-group
+		= f.label :password, :class => "control-label col-sm-2"
+		.col-sm-5
+			= f.password_field :password, :class => "form-control"
+
+	.form-group
+		= f.label :password_confirmation, "Confirmation", :class => "control-label col-sm-2"
+		.col-sm-5
+			= f.password_field :password_confirmation, :class => "form-control"
+
 	.actions
 		.col-sm-offset-2
 			= f.submit class: "btn btn-primary"
