--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,16 +1,17 @@
 %p#notice= notice
 
-.form-horizontal
-	.form-group
-		%strong.col-sm-3 Name:
-		.col-sm-4
-			= @user.name
-
-	.form-group
-		%strong.col-sm-3 Email:
-		.col-sm-4
+.col-sm-4
+	.row
+		%aside.span4
+			%section
+				%h1
+					= gravatar_for(@user)
+					= @user.name
 			= @user.email
 
+%div{ :style => "clear:both;" }
+%br
+%br
 
 = link_to 'Edit', edit_user_path(@user)
 |
