--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -5,3 +5,6 @@
 .complete { background: lightgray; }
 
 ul { list-style-type: none; }
+
+.list-group-item.yellow { background: yellow; }
+.list-group-item.white { background: white; }
