Adding config/database.yml

--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -18,9 +18,7 @@
 				%h1
 					= job.reference.to_s
 					%br
-					= job.party_a_name
-					v
-					= job.party_b_name
+					= job.parties
 				= job.title
 			-# = "&nbsp;&nbsp;&nbsp;".html_safe
 			-# &nbsp;&nbsp;&nbsp;
