--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
 				.navbar-collapse{ :class => "collapse" }
 					%ul.nav{ :class => "navbar-nav" }
 						%li{ :class => "#{params[:controller].eql?("jobs") ? "active" : ""}" }= link_to "Home", '/'
-						%li{ :class => "#{params[:controller].eql?("notes") ? "active" : ""}" }= link_to "Finance", :notes
+						%li{ :class => "#{params[:controller].eql?("contacts") ? "active" : ""}" }= link_to "Finance", :contacts
 						%li{ :class => "#{params[:controller].eql?("contacts") ? "active" : ""}" }= link_to "Contacts", :contacts
 						- b_on = params[:controller].eql?("template_tasks") ||  params[:controller].eql?("users") ||  params[:controller].eql?("notes") || params[:controller].eql?("tasks")
 						%li.dropdown{ :class => "#{b_on ? "active" : ""}" }
