--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,5 +37,8 @@
 								%li{ :class => "#{params[:controller].eql?("tasks") ? "active" : ""}" }= link_to "Tasks", :tasks
 
 
-		= yield
-		-#= debug(params) if Rails.env.development?
+		.container
+			- flash.each do |key, value|
+				.alert{ :class => "alert-#{ key }" }= value
+			= yield
+		= debug(params) if Rails.env.development?
