--- a/app/views/contacts/index.html.haml
+++ b/app/views/contacts/index.html.haml
@@ -28,9 +28,10 @@
 				%td= contact.address
 				%td= contact.post_code
 				%td= contact.text
-				%td= link_to 'Show', contact
-				%td= link_to 'Edit', edit_contact_path(contact)
-				%td= link_to 'Destroy', contact, method: :delete, data: { confirm: 'Are you sure?' }
+				%td
+					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-eye-open'></span></button>".html_safe, contact, html = {:title => "Show"}
+					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_contact_path(contact), html = {:title => "Edit"}
+				%td.text-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, contact, method: :delete, data: { confirm: 'Are you sure you want to delete this contact?' }, :title => "Destroy"
 
 
 %br
