--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -27,7 +27,7 @@
 				%td
 					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-eye-open'></span></button>".html_safe, note, html = {:title => "Show"}
 					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_note_path(note), html = {:title => "Edit"}
-				%td.text-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, note, method: :delete, data: { confirm: 'Are you sure?' }, :title => "Destroy"
+				%td.text-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, note, method: :delete, data: { confirm: 'Are you sure you want to delete?' }, :title => "Destroy"
 
 %br
 
