--- a/app/views/template_tasks/index.html.haml
+++ b/app/views/template_tasks/index.html.haml
@@ -1,4 +1,4 @@
-%h1 Template Tasks
+%h1 Task Templates
 
 %table.table
 	%thead
@@ -18,10 +18,11 @@
 				%td= template_task.title
 				%td= template_task.text
 				%td= template_task.due_days
-				%td= link_to 'Show', template_task
-				%td= link_to 'Edit', edit_template_task_path(template_task)
-				%td= link_to 'Destroy', template_task, method: :delete, data: { confirm: 'Are you sure?' }
+				%td
+					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-eye-open'></span></button>".html_safe, template_task, html = {:title => "Show"}
+					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_template_task_path(template_task), html = {:title => "Edit"}
+				%td.text-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, template_task, method: :delete, data: { confirm: 'Are you sure you want to delete this task template?' }, :title => "Destroy"
 
 %br
 
-= link_to 'New Template task', new_template_task_path
+= link_to 'New Task Template', new_template_task_path
