--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -14,9 +14,10 @@
 			%tr
 				%td= user.name
 				%td= user.email
-				%td= link_to 'Show', user
-				%td= link_to 'Edit', edit_user_path(user)
-				%td= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }
+				%td
+					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-eye-open'></span></button>".html_safe, user, html = {:title => "Show"}
+					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_user_path(user), html = {:title => "Edit"}
+				%td.text-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, user, method: :delete, data: { confirm: 'Are you sure you want to delete this user?' }, :title => "Destroy"
 
 
 %br
