--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,37 +8,9 @@
 
 	%body{ :role => "document" }
 
-		/ Fixed navbar
-		.navbar{ :class => "navbar-inverse navbar-fixed-top", :role => "navigation" }
-			.container
-				.navbar-header
-					%button.navbar-toggle{ :type => "button", :"data-toggle" => "collapse", :"data-target" => ".navbar-collapse" }
-						%span.sr-only Toggle navigation
-						%span.icon-bar
-						%span.icon-bar
-						%span.icon-bar
-					= link_to "Mediation Progression System", '/', :class => "navbar-brand"
-				.navbar-collapse{ :class => "collapse" }
-					%ul.nav{ :class => "navbar-nav" }
-						%li{ :class => "#{params[:controller].eql?("jobs") ? "active" : ""}" }= link_to "Home", '/'
-						%li{ :class => "#{params[:controller].eql?("finances") ? "active" : ""}" }= link_to "Finance", :finances
-						%li{ :class => "#{params[:controller].eql?("contacts") ? "active" : ""}" }= link_to "Contacts", :contacts
-						- b_on = params[:controller].eql?("template_tasks") ||  params[:controller].eql?("users") ||  params[:controller].eql?("notes") || params[:controller].eql?("tasks")
-						%li.dropdown{ :class => "#{b_on ? "active" : ""}" }
-							%a.dropdown-toggle{ :href => "#", :"data-toggle" => "dropdown" }
-								Admin
-								%b.caret
-							%ul.dropdown-menu
-								%li{ :class => "#{params[:controller].eql?("template_tasks") ? "active" : ""}" }= link_to "Task Templates", :template_tasks
-								%li{ :class => "#{params[:controller].eql?("users") ? "active" : ""}" }= link_to "Users", :users
-								%li.divider
-								%li.dropdown-header Edit Elements
-								%li{ :class => "#{params[:controller].eql?("notes") ? "active" : ""}" }= link_to "Notes", :notes
-								%li{ :class => "#{params[:controller].eql?("tasks") ? "active" : ""}" }= link_to "Tasks", :tasks
-
-
+		= render "layouts/header"
 		.container
-			- flash.each do |key, value|
-				.alert{ :class => "alert-#{ key }" }= value
+			-# flash.each do |key, value|
+				-#.alert{ :class => "alert-#{ key }" }= value
 			= yield
 		= debug(params) if Rails.env.development?
