--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -30,3 +30,18 @@ aside {
 	float: left;
 	margin-right: 10px;
 }
+
+/* Users index */
+.users {
+	list-style: none;
+	margin: 10px 0;
+	li {
+		overflow: auto;
+		padding: 10px 0;
+		/*height: 45px;*/
+		border-top: 1px solid #eee;
+		&:last-child {
+			border-bottom: 1px solid #eee;
+		}
+	}
+}
