--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -2,6 +2,16 @@
 
 = render 'form'
 
-= link_to 'Show', @user
-|
-= link_to 'Index', users_path
+.col-sm-offset-2
+	= gravatar_for @user
+	= link_to "change", "http://gravatar.com/emails", :target => "_blank"
+
+%div
+	%br
+	%br
+	%br
+	%br
+
+	= link_to 'Show', @user
+	|
+	= link_to 'Index', users_path
