--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,25 +1,35 @@
-%h1 Listing users
+%h1 All Users
 
-%table.table
-	%thead
-		%tr
-			%th Name
-			%th Email
-			%th 
-			%th 
-			%th 
+= will_paginate
 
-	%tbody
-		- @users.each do |user|
+%ul.users
+	/ Uses the _user partial!
+	= render @users
+
+= will_paginate
+/
+	%table.table
+		%thead
 			%tr
-				%td= user.name
-				%td= user.email
-				%td
-					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-eye-open'></span></button>".html_safe, user, html = {:title => "Show"}
-					= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_user_path(user), html = {:title => "Edit"}
-				%td.text-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, user, method: :delete, data: { confirm: 'Are you sure you want to delete this user?' }, :title => "Destroy"
+				%th
+				%th Name
+				%th Email
+				%th 
+				%th 
+				%th 
+
+		%tbody
+			- @users.each do |user|
+				%tr
+					%td= gravatar_for user, size: 52
+					%td= user.name
+					%td= user.email
+					%td
+						= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-eye-open'></span></button>".html_safe, user, html = {:title => "Show"}
+						= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-pencil'></span></button>".html_safe, edit_user_path(user), html = {:title => "Edit"}
+					%td.text-right= link_to "<button type='button' class='btn btn-default btn-xs'><span class='glyphicon glyphicon-trash'></span></button>".html_safe, user, method: :delete, data: { confirm: 'Are you sure you want to delete this user?' }, :title => "Destroy"
 
 
 %br
 
-= link_to 'New user', new_user_path
+= link_to 'New user', new_user_path if is_admin?
